``feat``: add private whisper
