# internal/pkg/entity/hope_whisper.go
@@ -9,5 +9,6 @@ type HopeWhisper struct {
 	gorm.Model
 	ID         uuid.UUID `gorm:"orimaryKey; not null; type:uuid; unique"`
 	Content    string    `gorm:"not null; type:varchar(2000)"`
+	IsPublic   bool      `gorm:"not null; default:false"`
 	IsApproved *bool
 }
